tests/invalid/type_error_ambiguous.err_exp
type_error_ambiguous.m:039: In clause for predicate `main'/2:
type_error_ambiguous.m:039:   in argument 1 of call to predicate
type_error_ambiguous.m:039:   `io.write_int'/3:
type_error_ambiguous.m:039:   type error: variable `X' has one of the following
type_error_ambiguous.m:039:   inferred types:
type_error_ambiguous.m:039:     character,
type_error_ambiguous.m:039:     pred(int, string),
type_error_ambiguous.m:039:     type_error_ambiguous.t1,
type_error_ambiguous.m:039:     type_error_ambiguous.t2;
type_error_ambiguous.m:039:   expected type was
type_error_ambiguous.m:039:     int.
For more information, recompile with `-E'.
